# NLWeb

./: .dockerignore  .env.template  .gitignore  AIOHTTP_MIGRATION.md  AIOHTTP_SERVER_STATUS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HelloWorld.md  LifeOfAChatQuery.md  RAI_TRANSPARENCY.md  README.md  Taskfile.yml  check_dependencies.py  codingrules.md  config.py  config.yaml  datacommons_variables_selenium.json  docker-compose.yaml  ensemble_test_queries.md  mcp_streamable_handler.py  pyproject.toml  requirements.txt  scrape_dc_simple_click.py  setup_oauth.sh  startup.sh  startup_aiohttp.sh  systemmap.md  test_aiohttp_server.py  test_endpoints.py  test_mcp.py  test_oauth_config.py  test_oauth_display.html  userworkflow.md
.devcontainer/: devcontainer.json  init.sh
code/: .env.template  README.md  StreamingWrapper.py  WebServer.py  analyze_query.py  app-file.py  azure-connectivity.py  azure_connectivity.py  azure_logger.py  azure_retrieve.py  baseHandler.py  check_connectivity.py  decontextualize.py  fastTrack.py  generate_answer.py  mcp_handler.py  memory.py  milvus_retrieve.py  mllm.py  post_prepare.py  post_ranking.py  prompt_runner.py  prompts.py  ranking.py  readme-md.md  relevance_detection.py  required_info.py  requirements.txt  retriever.py  setup.sh  snowflake-connectivity.py  snowflake_connectivity.py  startup.sh  state.py  static_file_handler.py  test_item_details.py  test_substitution_unit.py  trim.py  utils.py  web_server_utils.py  (+1 more)
config/: config_conv_store.yaml  config_embedding.yaml  config_llm.yaml  config_oauth.yaml  config_retrieval.yaml  sites.xml  (+3 more)
(+479 files in other folders)
