[project]
name = "nlweb"
version = "0.1.0"
description = "Add LLM chat functionality to your existing web pages by leveraging your site schema"
authors = [
    {name = "Your Name",email = "you@example.com"} # TODO: Provide Author
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "azure-ai-inference (>=1.0.0b9,<2.0.0)",
    "azure-core (>=1.34.0,<2.0.0)",
    "azure-search-documents (>=11.5.2,<12.0.0)",
    "azure-identity (>=1.22.0,<2.0.0)",
    "anthropic (>=0.51.0,<0.52.0)",
    "openai (>=1.78.1,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "google-cloud-aiplatform (>=1.92.0,<2.0.0)",
    "jsonschema (>=4.19.1)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pymilvus (>=2.5.8,<3.0.0)",
    "qdrant-client (>=1.14.2,<2.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false